[package]
name = "xkcdpass"
version = "0.5.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
repository = "https://github.com/dbrgn/xkcdpass-rs/"
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Generate XKCD style passwords made up by four (or any other number of) random english words from a word list."

[dependencies]
rand = "0.3"
docopt = "0.8"
serde = "1.0"
serde_derive = "1.0"

[profile.release]
lto = true
